examples/test/testpolicy14852.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14852
  namespace: namespace314
spec:
  podSelector:
    matchLabels:
      key29: value41
      key11: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value30
          key19: value15
          key7: value38
      podSelector:
        matchLabels:
          key30: value17
